scripts/manifest/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1                                                                                                              
kind: Ingress                                                                                                                                 
metadata:                                                                                                                                     
  name: grafana-ingress 
  namespace: prometheus                                                                                                                         
  labels:                                                                                                                                     
    app: grafana                                                                                                     
spec:                                                                                                                                         
  ingressClassName: nginx
  rules:
    - host: "grafana.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
