scripts/manifest/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: kube-logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: kube-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---
apiVersion: networking.k8s.io/v1                                                                                                              
kind: Ingress                                                                                                                                 
metadata:                                                                                                                                     
  name: kibana-ingress 
  namespace: kube-logging                                                                                                                          
  labels:                                                                                                                                     
    app: kibana                                                                                                     
spec:                                                                                                                                         
  ingressClassName: nginx
  rules:
    - host: "kibana.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
